// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input Input 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
        color="#011e38"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 iPmvAN"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Input
          </span>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
        >
          <div
            class="Box-sc-1qu1edy-0 klanzh"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
        color="#011e38"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 iPmvAN"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Set to disabled
          </span>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
        >
          <div
            class="Box-sc-1qu1edy-0 klanzh"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 hKYeEh"
              disabled=""
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input set to required 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="sc-fzXfMx dXtnjn"
    >
      <h2
        class="sc-AykKH dIrZHw"
        font-size="26px"
        font-weight="500"
      >
        Required field example
      </h2>
      <div
        class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
      >
        <label
          class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
          color="#011e38"
          style="display:block"
        >
          <div
            class="Box-sc-1qu1edy-0 iPmvAN"
          >
            <span
              style="font-size:14px;font-weight:600;line-height:1.71428571"
            >
              Label
            </span>
          </div>
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="true"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
                required=""
              />
            </div>
          </div>
        </label>
      </div>
      <button
        class="Button__WrapperButton-sc-1omxup2-0 kpKTNa sc-AykKK fmyQGk"
      >
        Send
      </button>
    </form>
  </div>
</div>
`;

exports[`Storyshots Input with a affix (prefix and suffix) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <form
      class="sc-fzXfMx jekoKQ"
      mb="x6"
    >
      <h2
        class="sc-AykKH dIrZHw"
        font-size="26px"
        font-weight="500"
      >
        Suffix
      </h2>
      <fieldset
        class="sc-fzXfMw jAYmwL"
      >
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              />
            </div>
            <div
              class="Box-sc-1qu1edy-0 gbjCIa"
            >
              <p
                class="sc-AykKF jUrMjw"
                color="currentColor"
                font-size="16px"
              >
                Eaches
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              />
            </div>
            <div
              class="Box-sc-1qu1edy-0 gbjCIa"
            >
              <p
                class="sc-AykKF jUrMjw"
                color="currentColor"
                font-size="16px"
              >
                Pallets and boxes
              </p>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="sc-fzXfMw iAKzA-d"
      >
        <legend
          class="sc-AykKI sc-AykKJ sc-fzXfMv bUxjSG"
          font-size="20px"
          font-weight="500"
        >
          With Custom Width
        </legend>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              />
            </div>
            <div
              class="Box-sc-1qu1edy-0 bIIlRs"
              width="360px"
            >
              <p
                class="sc-AykKF jUrMjw"
                color="currentColor"
                font-size="16px"
              >
                Eaches
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              />
            </div>
            <div
              class="Box-sc-1qu1edy-0 bIIlRs"
              width="360px"
            >
              <p
                class="sc-AykKF jUrMjw"
                color="currentColor"
                font-size="16px"
              >
                Pallets and boxes
              </p>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
    <form
      class="sc-fzXfMx jekoKQ"
      mb="x6"
    >
      <h2
        class="sc-AykKH dIrZHw"
        font-size="26px"
        font-weight="500"
      >
        Prefix
      </h2>
      <fieldset
        class="sc-fzXfMw jAYmwL"
      >
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 hdngKl"
            >
              <p
                class="sc-AykKF jUrMjw"
                color="currentColor"
                font-size="16px"
              >
                Eaches
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              />
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 hdngKl"
            >
              <p
                class="sc-AykKF jUrMjw"
                color="currentColor"
                font-size="16px"
              >
                Pallets and boxes
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="sc-fzXfMw iAKzA-d"
      >
        <legend
          class="sc-AykKI sc-AykKJ sc-fzXfMv bUxjSG"
          font-size="20px"
          font-weight="500"
        >
          With Custom Width
        </legend>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 cIetMj"
              width="360px"
            >
              <p
                class="sc-AykKF jUrMjw"
                color="currentColor"
                font-size="16px"
              >
                Eaches
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              />
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 cIetMj"
              width="360px"
            >
              <p
                class="sc-AykKF jUrMjw"
                color="currentColor"
                font-size="16px"
              >
                Pallets and boxes
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="sc-fzXfMw iAKzA-d"
      >
        <legend
          class="sc-AykKI sc-AykKJ sc-fzXfMv bUxjSG"
          font-size="20px"
          font-weight="500"
        >
          With right alignment
        </legend>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 cIetMj"
              width="360px"
            >
              <p
                class="sc-AykKF cfBbAL"
                color="currentColor"
                font-size="16px"
              >
                Eaches
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              />
            </div>
          </div>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
        >
          <div
            class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
          >
            <div
              class="Box-sc-1qu1edy-0 cIetMj"
              width="360px"
            >
              <p
                class="sc-AykKF cfBbAL"
                color="currentColor"
                font-size="16px"
              >
                Pallets and boxes
              </p>
            </div>
            <div
              class="Box-sc-1qu1edy-0 klanzh"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="false"
                class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </form>
    <form
      class="sc-fzXfMx jekoKQ"
      mb="x6"
    >
      <h2
        class="sc-AykKH dIrZHw"
        font-size="26px"
        font-weight="500"
      >
        Prefix and Suffix
      </h2>
      <div
        class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
      >
        <div
          class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
        >
          <div
            class="Box-sc-1qu1edy-0 hdngKl"
          >
            <p
              class="sc-AykKF jUrMjw"
              color="currentColor"
              font-size="16px"
            >
              Quantity
            </p>
          </div>
          <div
            class="Box-sc-1qu1edy-0 klanzh"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
            />
          </div>
          <div
            class="Box-sc-1qu1edy-0 gbjCIa"
          >
            <p
              class="sc-AykKF jUrMjw"
              color="currentColor"
              font-size="16px"
            >
              Eaches
            </p>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Input with all props 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
        color="#011e38"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 iPmvAN"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Input
          </span>
          <span
            class="sc-AykKF bNiwGI"
            color="darkGrey"
            font-size="12px"
          >
            Required
          </span>
          <p
            class="sc-AykKF sc-fzXfLV kckwMb"
            color="currentColor"
            font-size="16px"
          >
            Additional help text
          </p>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
        >
          <div
            class="Box-sc-1qu1edy-0 klanzh"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="true"
              class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              placeholder="Placeholder"
              required=""
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input with custom ID 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
        color="#011e38"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 iPmvAN"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Label
          </span>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
        >
          <div
            class="Box-sc-1qu1edy-0 klanzh"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 gMpUUS"
              id="my-own-id"
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input with error list  1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
        color="#011e38"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 iPmvAN"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Label
          </span>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
        >
          <div
            class="Box-sc-1qu1edy-0 klanzh"
            display="flex"
          >
            <input
              aria-invalid="true"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 gpgWan"
            />
          </div>
        </div>
      </label>
      <div
        class="Box-sc-1qu1edy-0 sc-AykKC bnFjvb"
        color="#cc1439"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD bNpWy"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-1jic7dw-0 iXAlLy"
        >
          <p
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
            Error message
          </p>
          <ul
            class="List-sc-1cqkmnl-0 kMmxnE"
            color="currentColor"
          >
            <li
              class="ListItem-qqenhw-0 jlnRPI"
              color="currentColor"
            >
              Error message 1
            </li>
            <li
              class="ListItem-qqenhw-0 jlnRPI"
              color="currentColor"
            >
              Error message 2
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input with error message 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-fzXfLX sBbYB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy sc-fzXfLW casIUc"
        color="#011e38"
        style="display:block"
      >
        <div
          class="Box-sc-1qu1edy-0 iPmvAN"
        >
          <span
            style="font-size:14px;font-weight:600;line-height:1.71428571"
          >
            Label
          </span>
        </div>
        <div
          class="Box-sc-1qu1edy-0 sc-AykKC bFdvBb"
        >
          <div
            class="Box-sc-1qu1edy-0 klanzh"
            display="flex"
          >
            <input
              aria-invalid="true"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 gpgWan"
            />
          </div>
        </div>
      </label>
      <div
        class="Box-sc-1qu1edy-0 sc-AykKC bnFjvb"
        color="#cc1439"
      >
        <svg
          aria-hidden="true"
          class="sc-AykKD bNpWy"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-1jic7dw-0 iXAlLy"
        >
          <p
            class="sc-AykKF jKbmDj"
            color="currentColor"
            font-size="16px"
          >
            Error message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
